Update portfolio: personal info, projects, skills

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                         <ul class="space-y-2 text-sm text-gray-400">
                             <li>Email: mohamed.elmaatouqui@example.com</li>
                             <li>Phone: +212 600 000 000</li>
-                            <li>Location: Marrakech, Morocco</li>
+                            <li>Location: Ouarzazate, Morocco</li>
                         </ul>
                    </div>
              </div>
